# trllm

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html
demo/: cost_forensics_demo.py  demo_pipeline.py  live_query_demo.py
tests/: test_api.py  test_events.py  test_graph.py  test_linker.py  test_tracer.py
tests/cost_forensics/: conftest.py  test_adapters.py  test_annotator.py  test_async_adapters.py  test_bedrock.py  test_cli.py  test_constraints.py  test_diff.py  test_langchain.py  test_live_ollama.py  test_pricing.py  test_reports.py  test_rollup.py  test_streaming.py  test_waste.py
trllm/: __init__.py  constraints.py  events.py  graph.py  linker.py  tracer.py
trllm/adapters/: ollama.py
trllm/api/: models.py  server.py
trllm/cost_forensics/: __init__.py  annotator.py  cli.py  constraints.py  diff.py  pricing.py  reports.py  rollup.py  waste.py
trllm/cost_forensics/adapters/: __init__.py  anthropic.py  anthropic_async.py  bedrock.py  langchain.py  openai.py  openai_async.py  streaming.py
trllm/visualization/: renderer.py
