[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trllm"
version = "0.2.0"
description = "Causal cost attribution and waste detection for LLM/agent pipelines"
license = "MIT"
authors = [
    {name = "Devin Hill"},
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyrapide>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/iamdevinhill/trllm"
Repository = "https://github.com/iamdevinhill/trllm"
Issues = "https://github.com/iamdevinhill/trllm/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.30.0"]
bedrock = ["boto3>=1.28.0"]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.3.0",
]

[project.scripts]
trllm-cost-forensics = "trllm.cost_forensics.cli:main"

[tool.setuptools.packages.find]
include = ["trllm*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88
